src/test/ui/coherence/coherence-impl-trait-for-marker-trait-negative.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impl-trait-for-marker-trait-negative.rs:23:1
   |
LL | impl !Send for dyn Marker2 {}
   | ^^^^^^^^^^^^^^^-----------
   | |              |
   | |              `dyn Marker2` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `(dyn Object + 'static)`
  --> $DIR/coherence-impl-trait-for-marker-trait-negative.rs:27:1
   |
LL | impl !Send for dyn Object {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `(dyn Object + Marker2 + 'static)`
  --> $DIR/coherence-impl-trait-for-marker-trait-negative.rs:28:1
   |
LL | impl !Send for dyn Object + Marker2 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0371]: the object type `(dyn Object + Marker2 + 'static)` automatically implements the trait `Marker1`
  --> $DIR/coherence-impl-trait-for-marker-trait-negative.rs:15:1
   |
LL | impl !Marker1 for dyn Object + Marker2 { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Object + Marker2 + 'static)` automatically implements trait `Marker1`

error[E0371]: the object type `(dyn Object + Marker2 + 'static)` automatically implements the trait `Marker2`
  --> $DIR/coherence-impl-trait-for-marker-trait-negative.rs:17:1
   |
LL | impl !Marker2 for dyn Object + Marker2 { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Object + Marker2 + 'static)` automatically implements trait `Marker2`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0117, E0321, E0371.
For more information about an error, try `rustc --explain E0117`.
